--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <footer class="footer">
             <a href="mailto:smartdhanush000@gmail.com" class="footer__link" id="contact">smartdhanush000@gmail.com</a>
             <ul class="social-list">
-                <li class="social-list__item"><a class="social-list__link" href="https://github.com">
+                <li class="social-list__item"><a class="social-list__link" href="https://github.com/Dhanush0014?tab=repositories">
                     <i class="fab fa-github"></i>
                    </a>
                </li>
