--- a/portfolio-item-03.html
+++ b/portfolio-item-03.html
@@ -62,7 +62,7 @@
             <a href="mailto:smartdhanush000@gmail.com" class="footer__link">smartdhanush000@gmail.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/Dhanush0014?tab=repositories>
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
