--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="portfolio">
                 <!-- Portfolio item 01 -->
                 <a href="portfolio-item-01.html" class="portfolio__item">
-                    <img src="img/adaptiveCharging.png" alt="" class="portfolio__img">
+                    <img src="img/adaptiveCharging-transformed.jpeg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 02 -->
@@ -95,7 +95,7 @@
 
                  <!-- Portfolio item 02 -->
                  <a href="portfolio-item-03.html" class="portfolio__item">
-                    <img src="img/adBlocker.png" alt="" class="portfolio__img">
+                    <img src="img/adBlocker-transformed.jpeg" alt="" class="portfolio__img">
                 </a>
 
             </div>
