--- a/portfolio-item-01.html
+++ b/portfolio-item-01.html
@@ -38,7 +38,7 @@
                 <strong>Adaptive Charging</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">customize your Charging time</p>
-            <img src="img/adaptiveCharging.png" alt="" class="intro_img">
+            <img src="img/adaptiveCharging-transformed.jpeg" alt="" class="intro_img">
         </section>
         
         <div class="portfolio-item-individual">
