--- a/portfolio-item-03.html
+++ b/portfolio-item-03.html
@@ -38,7 +38,7 @@
                 <strong>Ad-Blocker</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">ML based ad-blocker</p>
-            <img src="img/adBlocker.png" alt="" class="intro_img">
+            <img src="img/adBlocker-transformed.jpeg" alt="" class="intro_img">
         </section>
         
         <div class="portfolio-item-individual">
