--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                
             </p> -->
             <div class="about-me__body">
-                <p> I pursued Electronics and Communication Engineering at Sri Eshwar college of Engineering. I'm always ready to have new experiences, meet new people and learn new things. I find the idea of creating value for people and impacting the world through my work gratifying.I worked as backend Developer in a startup company for 9 months.</p>
+                <p> I pursued my Electronics and Communication Engineering at Sri Eshwar college of Engineering. I'm always ready to have new experiences, meet new people and learn new things. I find the idea of creating value for people and impacting the world through my work gratifying.I worked as backend Developer in a startup company for 9 months.</p>
             </div>
 
             <img src="img/dhanush_guitar.jpg" alt="Dhanush with a guitar" class="about-me_img">
@@ -104,12 +104,12 @@
         <!-- Footer -->
         <footer class="footer">
             <a href="mailto:smartdhanush000@gmail.com" class="footer__link" id="contact">smartdhanush000@gmail.com</a>
-            <ul class="social-list">
+            <!-- <ul class="social-list">
                 <li class="social-list__item"><a class="social-list__link" href="https://github.com/Dhanush0014?tab=repositories">
                     <i class="fab fa-github"></i>
                    </a>
                </li>
-            </ul>
+            </ul> -->
         </footer>
         
     <script src="js/index.js"></script>
